src/ListingsList.css
.listings__container {
  width: 100%;
  margin-top: 30px;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.listings__container a:hover {
  color: var(--text-color);
}

.listing__card {
  max-width: 25%;
  padding: 15px;
  justify-content: center;
  border-radius: 25%;
}

/* Media Queries */

@media (max-width: 1223px) {
  .listing__card {
    max-width: 33%;
  }
}

@media (max-width: 950px) {
  .listing__card {
    max-width: 50%;
  }
}

@media (max-width: 767px) {
  .listing__card {
    width: 60px;
  }
  .container {
    padding: 0 50px;
  }
}

